# Fine-Tuned-Domain-LLM

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: data_config.yaml  dataset_config.yaml  deployment_config.yaml  eval_config.yaml  lora_config.yaml  report_config.yaml  serving_config.yaml  training_config.yaml
data/: dataset_card.md
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.serving  docker-compose.demo.yml  docker-compose.gpu.yml  docker-compose.yml
docs/: architecture.md  dataset_card.md  dataset_guide.md  deployment_guide.md  eval_guide.md  faq.md  interview_guide.md  model_card.md  project_summary.md  publishing_guide.md  reproducibility.md  roadmap.md  training_guide.md
evaluation/: compare_models.py  run_baseline_eval.py  run_finetuned_eval.py
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/benchmark/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/health/: route.ts
frontend/components/: AnalyzeButton.tsx  ArchitectureFlow.tsx  BenchmarkSummary.tsx  CopyButton.tsx  ErrorAlert.tsx  FilingInput.tsx  QuestionInput.tsx  ResponseComparison.tsx  ResponsePanel.tsx  StatusBadge.tsx  TaskSelector.tsx
frontend/lib/: api.ts  benchmark.ts  config.ts  mockResponses.ts  samples.ts  taskTypes.ts  utils.ts
frontend/test/: setup.ts
frontend/tests/: api.test.ts  benchmark.test.ts  components.test.tsx  mockResponses.test.ts  page.test.tsx  taskTypes.test.ts
notebooks/: 01_eda_filings.ipynb  02_dataset_analysis.ipynb  03_training_analysis.ipynb  04_eval_results.ipynb
reports/: baseline_eval_report.md  benchmark_report.md  demo_script.md  deployment_checklist.md  final_release_checklist.md  linkedin_post.md  report_appendix.md  report_metadata.json  report_template.md  resume_bullets.md  training_run_template.md
reports/report_assets/: report_readme.md  style.css
scripts/: build_instruction_dataset.py  check_api_server.py  check_full_stack.py  check_vllm_server.py  deploy_gpu_vm.sh  deploy_local.sh  download_edgar.py  enhance_dataset.py  export_deployment_bundle.sh  extract_sections.py  final_repo_check.py  generate_benchmark_report.py  upload_to_hub.py  validate_dataset.py  validate_report.py
serving/: benchmark_latency.py  start_api.sh  test_endpoint.py  vllm_lora_server.sh  vllm_server.sh
src/finsage/: __init__.py  config.py  logging_utils.py
src/finsage/data/: __init__.py  chunker.py  dataset_builder.py  dataset_validator.py  edgar_client.py  instruction_builder.py  llm_target_generator.py  preprocessor.py  section_extractor.py
src/finsage/evaluation/: __init__.py  comparison.py  generators.py  judge.py  metrics.py  prompts.py  report_generator.py  runner.py  visualization.py
src/finsage/reporting/: __init__.py  charts.py  exporters.py  loaders.py  qualitative.py  report_builder.py  tables.py
src/finsage/serving/: __init__.py  app.py  auth.py  disclaimer.py  errors.py  health.py  middleware.py  prompt_templates.py  rate_limiter.py  routes.py  schemas.py  vllm_client.py
src/finsage/training/: __init__.py  callbacks.py  data_collator.py  data_formatter.py  qlora_trainer.py
tests/: __init__.py  conftest.py  test_api.py  test_api_middleware.py  test_api_routes.py  test_api_schemas.py  test_auth.py  test_benchmark_report.py  test_check_api_server.py  test_chunker.py  test_comparison.py  test_config.py  test_data_formatter.py  test_dataset_builder.py  test_dataset_validator.py  test_deployment_scripts.py  test_disclaimer.py  test_docker_files.py  test_edgar_client.py  test_enhance_dataset_cli.py  test_eval_runner.py  test_final_repo_check.py  test_finetuned_eval_cli.py  test_finetuned_generators.py  test_full_stack_check.py  test_generate_benchmark_report_cli.py  test_generators.py  test_instruction_builder.py  test_latency_benchmark.py  test_llm_target_generator.py  test_merge_adapter.py  test_metrics.py  test_preprocessor.py  test_prompt_templates.py  test_prompts.py  test_qlora_trainer.py  test_qualitative_reporting.py  test_rate_limiter.py  test_report_builder.py  test_report_charts.py  (+11 more)
tests/fixtures/: baseline_predictions_sample.jsonl  baseline_results_sample.json  company_tickers_sample.json  eval_test_sample.jsonl  finetuned_predictions_sample.jsonl  finetuned_results_sample.json  processed_manifest_sample.jsonl  sample_10k.html  submissions_sample.json  train_sample.jsonl  validation_sample.jsonl
tests/fixtures/processed_sec/AAPL/10-K/2022/sample/: business.txt  mda.txt  risk_factors.txt
tests/fixtures/processed_sec/MSFT/10-K/2022/sample/: business.txt  risk_factors.txt
tests/fixtures/processed_sec/NVDA/10-K/2023/sample/: mda.txt
tests/fixtures/processed_sec/TSLA/10-K/2023/sample/: financial_statements.txt
tests/fixtures/reporting/: api_latency_benchmark.json  baseline_results.json  comparison_results_sample.json  comparison_summary.json  dataset_stats_sample.json  finetuned_results.json  latency_benchmark_sample.json  metric_delta_by_task.json  qualitative_comparisons.jsonl  training_summary_sample.json
training/: merge_adapter.py  train.py
