[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finsage"
version = "0.1.0"
description = "FinSage-7B — a fine-tuned domain LLM for financial filing analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sayuj Sawant" }]
keywords = ["llm", "finance", "sec", "qlora", "fine-tuning", "mistral"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Default install is intentionally lightweight and CPU-friendly.
# Heavy GPU / ML dependencies live in the optional groups below.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "types-beautifulsoup4>=4.12",
]
ml = [
    "transformers>=4.41",
    "datasets>=2.19",
    "evaluate>=0.4",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "spacy>=3.7",
    "datasketch>=1.6",
]
training = [
    "torch>=2.3",
    "transformers>=4.41",
    "accelerate>=0.30",
    "peft>=0.11",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    "wandb>=0.17",
]
serving = [
    # GPU/Linux-oriented: vLLM requires CUDA and will not install on most
    # macOS/Windows machines. httpx (already a core dep) drives the client.
    "vllm>=0.4",
    "httpx>=0.27",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
finsage-download = "scripts.download_edgar:app"
finsage-extract = "scripts.extract_sections:app"
finsage-build-dataset = "scripts.build_instruction_dataset:app"
finsage-validate = "scripts.validate_dataset:app"

[project.urls]
Homepage = "https://github.com/sayujsawant-max/Fine-Tuned-Domain-LLM"
Repository = "https://github.com/sayujsawant-max/Fine-Tuned-Domain-LLM"

[tool.hatch.build.targets.wheel]
packages = ["src/finsage"]

[tool.hatch.metadata]
allow-direct-references = true

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by black
    "B008", # FastAPI/Typer use function calls in argument defaults by design
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src", "scripts", "training", "evaluation", "serving", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["src", "."]
