[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finsage"
version = "0.1.0"
description = "FinSage-7B — a fine-tuned domain LLM for financial filing analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sayuj Sawant" }]
keywords = ["llm", "finance", "sec", "qlora", "fine-tuning", "mistral"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Default install is intentionally lightweight and CPU-friendly.
# Heavy GPU / ML dependencies live in the optional groups below.
# Upper bounds are pinned to the next major version so a transitive resolver
# never silently pulls a breaking release into this "frozen" portfolio build.
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.7,<16.0",
    "typer>=0.12,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.2,<7.0",
    "pyyaml>=6.0,<7.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "ruff>=0.4,<1.0",
    "black>=24.3,<27.0",
    "mypy>=1.9,<3.0",
    "types-PyYAML>=6.0,<7.0",
    "types-beautifulsoup4>=4.12,<5.0",
]
ml = [
    "transformers>=4.41,<5.0",
    "datasets>=2.19,<5.0",
    "evaluate>=0.4,<1.0",
    "rouge-score>=0.1.2,<1.0",
    "bert-score>=0.3.13,<1.0",
    "scikit-learn>=1.4,<2.0",
    "matplotlib>=3.8,<4.0",
    "spacy>=3.7,<4.0",
    "datasketch>=1.6,<2.0",
]
training = [
    "torch>=2.3,<3.0",
    "transformers>=4.41,<5.0",
    "accelerate>=0.30,<2.0",
    "peft>=0.11,<1.0",
    "trl>=0.8,<1.0",
    "bitsandbytes>=0.43,<1.0",
    "wandb>=0.17,<1.0",
]
serving = [
    # GPU/Linux-oriented: vLLM requires CUDA and will not install on most
    # macOS/Windows machines. httpx (already a core dep) drives the client.
    "vllm>=0.4,<1.0",
    "httpx>=0.27,<1.0",
]
llm = [
    # Optional: LLM-assisted dataset target enhancement (Phase 3.5). Needs an
    # ANTHROPIC_API_KEY at runtime; never part of the default install.
    "anthropic>=0.40,<1.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
]
# Optional shared rate-limit backend for multi-replica API deployments.
# Enabled at runtime via RATE_LIMIT_BACKEND=redis + REDIS_URL; the API falls
# back to the in-memory limiter when this is not installed/reachable.
redis = [
    "redis>=5.0,<7.0",
]
# Optional benchmark-report exporters (Phase 11). matplotlib also lives in the
# ``ml`` group; charts/HTML/PDF all degrade gracefully when these are absent.
# WeasyPrint needs native libs and is skipped on Windows (ReportLab covers PDF).
reporting = [
    "matplotlib>=3.8,<4.0",
    "markdown>=3.5,<4.0",
    "reportlab>=4.0,<5.0",
    "weasyprint>=60; platform_system != 'Windows'",
]

[project.scripts]
finsage-download = "scripts.download_edgar:app"
finsage-extract = "scripts.extract_sections:app"
finsage-build-dataset = "scripts.build_instruction_dataset:app"
finsage-validate = "scripts.validate_dataset:app"

[project.urls]
Homepage = "https://github.com/sayujsawant-max/Fine-Tuned-Domain-LLM"
Repository = "https://github.com/sayujsawant-max/Fine-Tuned-Domain-LLM"

[tool.hatch.build.targets.wheel]
packages = ["src/finsage"]

[tool.hatch.metadata]
allow-direct-references = true

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by black
    "B008", # FastAPI/Typer use function calls in argument defaults by design
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src", "scripts", "training", "evaluation", "serving", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["src", "."]
